@startuml
title Audino Healthcare System - Class Diagram

class MainController {
  - dataService : DataService
  - interactionEngine : InteractionEngine
  - selectedPatient : Patient
  - currentPrescription : Prescription
  - patientList : ObservableList<Patient>
  - medicationList : ObservableList<Medication>
  - prescribedDrugList : ObservableList<PrescribedDrug>
  - alertList : ObservableList<InteractionAlert>
  + initialize() : void
  + handlePatientSelection(Patient) : void
  + handleAddMedication() : void
  + handleSave() : void
  + handleRefresh() : void
  + checkInteractions() : void
  + updateUIState() : void
}

class PricingPromptController {
  - baseCost : double
  + calculateCost() : double
}

class DataService {
  - objectMapper : ObjectMapper
  - patients : List<Patient>
  - medications : List<Medication>
  - prescriptions : List<Prescription>
  - interactionRules : List<InteractionRule>
  + loadAllData() : void
  + savePatient(Patient) : void
  + savePrescription(Prescription) : void
  + searchPatients(String) : List<Patient>
  + searchMedications(String) : List<Medication>
  + getActivePrescriberionForPatient(String) : Prescription
  + authenticate(String, String) : User
}

class Patient {
  - patientId : String
  - firstName : String
  - lastName : String
  - dateOfBirth : LocalDate
  - gender : String
  - allergies : List<String>
  - chronicConditions : List<String>
  + getFullName() : String
  + getAge() : int
  + addAllergy(String) : void
  + addChronicCondition(String) : void
}

class Prescription {
  - prescriptionId : String
  - patient : Patient
  - prescriber : String
  - dateCreated : LocalDateTime
  - status : PrescriptionStatus
  - prescribedDrugs : List<PrescribedDrug>
  - alerts : List<InteractionAlert>
  + addPrescribedDrug(PrescribedDrug) : void
  + removePrescribedDrug(PrescribedDrug) : void
  + isEmpty() : boolean
  + setStatus(PrescriptionStatus) : void
}

class PrescribedDrug {
  - medicationId : String
  - medication : Medication
  - dosage : String
  - frequency : String
  - duration : String
  - instructions : String
  - prescriber : String
  + getMedication() : Medication
  + setMedication(Medication) : void
  + getDosage() : String
  + getFrequency() : String
}

class Medication {
  - medicationId : String
  - displayName : String
  - genericName : String
  - medicationType : MedicationType
  - medicationClasses : List<String>
  - strength : String
  - unit : String
  - pricePerUnit : Double
  + getDisplayName() : String
  + isValidDosage(String) : boolean
  + getMedicationClasses() : List<String>
}

class User {
  - username : String
  - passwordHash : String
  - role : String
  + authenticate() : boolean
}

class InteractionEngine {
  - strategies : List<InteractionCheckStrategy>
  + checkAllInteractionsAsync() : CompletableFuture<List<InteractionAlert>>
  + addStrategy(InteractionCheckStrategy) : void
  + shutdown() : void
}

interface InteractionCheckStrategy <<interface>> {
  + checkInteraction(Patient, List<PrescribedDrug>, List<InteractionRule>, List<Medication>) : List<InteractionAlert>
}

class AllergyCheckStrategy implements InteractionCheckStrategy
class DrugDrugCheckStrategy implements InteractionCheckStrategy
class ConditionCheckStrategy implements InteractionCheckStrategy

class InteractionAlert {
  - alertLevel : AlertLevel
  - alertType : String
  - message : String
  - acknowledged : boolean
  + acknowledge() : void
  + getFormattedMessage() : String
}

enum AlertLevel <<enum>> {
  CRITICAL
  WARNING
  INFO
}

enum PrescriptionStatus <<enum>> {
  DRAFT
  APPROVED
  CANCELLED
}

MainController --> DataService : uses
MainController --> InteractionEngine : uses
MainController --> PricingPromptController : launches
DataService --> Patient : manages
DataService --> Medication : manages
DataService --> Prescription : manages
DataService --> User : authenticates
Patient "1" *-- "many" Prescription : has
Prescription "1" *-- "many" PrescribedDrug : contains
PrescribedDrug "*" --> "1" Medication : references
InteractionEngine --> InteractionCheckStrategy : uses
InteractionCheckStrategy ..> InteractionAlert : produces

@enduml
